Method to provide space geometries, required for fixing #19.
